# daliuge-component-template

./: .gitignore  ABOUT_THIS_TEMPLATE.md  HISTORY.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: eagle_palette.yml  main.yml
daliuge/palettes/: project_name.palette
project_name/: __init__.py  __main__.py  appComponents.py  apps.py  data.py  dataComponents.py  pyfuncs.py
tests/: test_components.py  test_pyfuncs.py
